--- a/css/main.css
+++ b/css/main.css
@@ -832,7 +832,6 @@ button.button-3d:active {
   display: flex;
   flex-flow: row;
   justify-content: flex-start;
-  border: 2px solid #404040;
   border: 2px solid var(--color-purple-01-600);
   border-right: none;
   border-top-left-radius: 3px;
@@ -940,7 +939,9 @@ span.custom-label {
   background-color: var(--color-semantic-alert-400);
 }
 li.todo-item {
-  position: absolute;
+  position: relative;
+  top: 8px;
+  left: -25px;
   width: 108%;
   display: flex;
   flex-direction: row;
@@ -948,7 +949,6 @@ li.todo-item {
   font-size: 1.5rem;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
 }
 @media (max-width: 576px) {
   li.todo-item {
