--- a/src/input.css
+++ b/src/input.css
@@ -886,7 +886,6 @@ button.button-3d:active {
    display: flex;
    flex-flow: row;
    justify-content: flex-start;
-   border: 2px solid #404040;
    border: 2px solid var(--color-purple-01-600);
    border-right: none;
    border-top-left-radius: 3px;
@@ -1026,7 +1025,9 @@ span.custom-label {
 ==================================================================*/
 
 li.todo-item {
-   position: absolute;
+   position: relative;
+   top: 8px;
+   left: -25px;
    width: 108%;
    display: flex;
    flex-direction: row;
@@ -1034,7 +1035,7 @@ li.todo-item {
    font-size: 1.5rem;
    white-space: nowrap;
    overflow: hidden;
-   text-overflow: ellipsis;
+
 }
 
 @media (max-width: 576px) {
