--- a/css/main.css
+++ b/css/main.css
@@ -953,6 +953,7 @@ li.todo-item {
 @media (max-width: 576px) {
   li.todo-item {
     width: 100%;
+    left: -5px;
   }
 }
 input[type="checkbox"] {
